--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Main</title>
     <link rel="stylesheet" type="text/css" media="screen" href="src/css/app.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
